fixed spacing btw person icons

--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ h1 {
 }
 #individual-image {
     margin-right: 10px;
-    line-height: 10px;
+    line-height: 20px;
     color: white;
 }
 #covid-image {
